feat: reg as instructor endpoints + lock + refactor